kubernetes/spack/kibana-spack-io/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: spack
spec:
  tls:
  - secretName: tls-kibana
  rules:
  - host: kibana.spack.io
    http:
      paths:
      - backend:
          serviceName: kibana-kb-http
          servicePort: 5601
